--- a/style.css
+++ b/style.css
@@ -56,3 +56,20 @@ img {
 	width: 30px;
 	border-radius: 50%;
 }
+.program-heading {
+/*	box-shadow: 2px 2px 2px 2px #888888;
+	0.5px 0.5px 2px 0.2px #888888;
+*/	
+	color: #2f3033;
+	box-shadow: 0.5px 0.5px 2px 0.2px #888888;
+	width: 320px;
+	height: 115px;
+	margin-left: 15px;
+	padding-top: 10px;
+	padding-left: 25px;
+}
+.program-heading:hover {
+	background-color: #8b95e8;
+	color: white;
+	cursor: pointer;
+}
